eval_outputs/diff_and_source_code/code_change/second/google/refined_chain-of-thought.log
=== RETURN CODE: 1 ===

=== STDOUT ===
SyntaxError: /Users/johndennehy/Documents/Coding/devops-atu-disruptive-devops-assignment/app/e2e/refined_chain-of-thought.spec.ts: Unterminated template. (19:3)

  17 |   }
  18 | });
> 19 | ```
     |    ^

   at refined_chain-of-thought.spec.ts:19

  17 |   }
  18 | });
> 19 | ```
     |   ^

Error: No tests found.
Make sure that arguments are regular expressions matching test files.
You may need to escape symbols like "$" or "*" and quote the arguments.

[1A[2K

=== STDERR ===

